<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/hotline_conv_detail_text_reply_layout"
    style="?attr/hotlineMessageReplyViewStyle"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/hotline_conv_detail_attach_image"
        android:layout_width="@dimen/hotline_message_attach_icon_size"
        android:layout_height="@dimen/hotline_message_attach_icon_size"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="?attr/hotlineActionSelectableItemBackground"
        android:padding="@dimen/hotline_message_attach_icon_padding"
        android:contentDescription="@string/hotline_description_attach_image"
        android:src="?attr/hotlineAttachIcon" />

    <EditText
        android:id="@+id/hotline_conv_detail_reply_text"
        style="?attr/hotlineMessageReplyEditTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/hotline_conv_detail_attach_image" />

    <ImageView
        android:id="@+id/hotline_conv_detail_record_voice_reply_button"
        android:layout_width="@dimen/hotline_message_send_icon_size"
        android:layout_height="@dimen/hotline_message_send_icon_size"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/hotline_message_send_icon_padding"
        android:background="?attr/hotlineActionSelectableItemBackground"
        android:contentDescription="@string/hotline_description_voice_message"
        android:src="?attr/hotlineRecordIcon"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/hotline_conv_detail_send_reply_button"
        android:layout_width="@dimen/hotline_message_send_icon_size"
        android:layout_height="@dimen/hotline_message_send_icon_size"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:padding="@dimen/hotline_message_send_icon_padding"
        android:background="?attr/hotlineActionSelectableItemBackground"
        android:contentDescription="@string/hotline_description_send_message"
        android:src="?attr/hotlineSendIcon"
        android:visibility="gone" />

</RelativeLayout>